refactor(java25): model out-params/tuples as records; SequencedCollection (JCLAW-749)
Java-25 modeling slice of JCLAW-749:
- TelegramOutboundPlanner: getLast()/removeLast() over get(size()-1) in the
  guarded caption/text-merge paths.
- Commands: findLatestAssistantUsage returns Optional<TokenUsage> instead of
  int[] + null sentinel (drops the S1168 suppression); both callers updated;
  SlashCommandsTest reflection helper adapts Optional<record> back to int[].
- TaskTool: collectRunNowTargets returns a RunNowScan record, replacing the
  int[] revivedRef + List<Long> lostIds out-params.

Behavior-preserving; compileJava + compileTestJava green. Remaining 749:
sealed SubagentCmd, and DiscoveredModel (overlaps JCLAW-770, done there).

Co-Authored-By: Claude Opus 4.8 (1M context) <noreply@anthropic.com>